--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -7,13 +7,13 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 
-  @media (min-width: $screen-xs-min) {
+  @media (min-width: $screen-sm-min) {
     background: image-url($desktop-image-path);
     height: $desktop-image-height;
     width: $desktop-image-width; /* Width of new image */
     padding-left: $desktop-image-width; /* Equal to width of new image */
   }
-  @media (max-width: $screen-xs-min) {
+  @media (max-width: $screen-xs-max) {
     background: image-url($mobile-image-path);
     height: $mobile-image-height;
     width: $mobile-image-width; /* Width of new image */
